# FAI-SWI

./: Příkazy.txt  README.md
Druhák/Algoritmy a datové struktory/automat/: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
Druhák/Algoritmy a datové struktory/automat/app/: CMakeLists.txt  main.c
Druhák/Algoritmy a datové struktory/automat/docs/html/: _f_s_m_8c.html  _f_s_m_8c.js  _f_s_m_8c__incl.map  _f_s_m_8c__incl.md5  _f_s_m_8h.html  _f_s_m_8h.js  _f_s_m_8h__dep__incl.map  _f_s_m_8h__dep__incl.md5  _f_s_m_8h__incl.map  _f_s_m_8h__incl.md5  _f_s_m_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_000000_000001.html  dir_000002_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.map  dir_d422163b96683743ed3963d4aac17747_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  globals.html  globals_func.html  graph_legend.html  group___f_s_m.html  group___f_s_m.js  (+11 more)
Druhák/Algoritmy a datové struktory/automat/src/: CMakeLists.txt  FSM.c
Druhák/Algoritmy a datové struktory/automat/test_files/: input_allTypes.c  input_commentInString.c  input_division.c  input_doxygen.c  input_escapedApos.c  input_escapedQuote.c  input_mclInString.c  input_singleMultiline.c  input_singleOneLiner.c  output_allTypes.c  output_doxygen.c  output_singleMultiline.c  output_singleOneLiner.c
Druhák/Algoritmy a datové struktory/automat/tests/: CMakeLists.txt  tests.cpp
(+569 files in other folders)
